# avicenna-agent

./: .env  .gitignore  FIX.md  MCP_MIGRATION_ARCHITECTURE.md  MCP_MIGRATION_IMPLEMENTATION_PLAN.md  README.md  ReadME.md  convert_face.py  debug_models.py  list_tools.py  main.py  prompt_for_llm.md  pyproject.toml  requirements.txt  test_setup.py  verify_gemini_provider.py  verify_mcp_servers.py
avicenna_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: AVICENNA_VERSION_HISTORY.md  EXECUTABLE_PACKAGING_PLAN.md  GOOGLE_WORKSPACE_AUTHORIZATION_ANALYSIS.md  GOOGLE_WORKSPACE_INTEGRATION.md  GOOGLE_WORKSPACE_SOLUTION.md  INTEGRATION_GUIDE.md  MCP_ECOSYSTEM_MIGRATION.md  MCP_TOOLS_GUIDE.md  OAUTH_ARCHITECTURE.md  PHASE5_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  REORGANIZATION_SUMMARY.md  SOLUTION_SUMMARY.md
mcp/: basic_server.py  gmail_server.py
mcp_servers/: mcp_client.py  mcp_config_schema.py
mcp_servers/deprecated/: README.md
source/avicenna/: config.py  core.py  face.ans  main.py  mcp_client.py  test_setup.py
source/avicenna/mcp/: mcp_config_schema.py
source/avicenna/providers/: gemini.py
source/providers/: __init__.py  gemini.py
source/tools/: __init__.py  base.py  basic.py  gmail.py
source/tools/deprecated/: README.md
src/avicenna/: client.py  config.py  main.py
tests/: verify_mcp_client.py  verify_phase5.py
